Got most of the stuff added

--- a/index.html
+++ b/index.html
@@ -5,36 +5,75 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Offbeat Retreats</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body>
-  Welcome to Offbeat Retreats!
-  Discover vacation rentals that are anything but ordinary.
-  Explore Now
-  
-  The UFO Bungalow
-  Experience an out-of-this-world stay in our UFO-themed bungalow. Enjoy cosmic views and "alien" hospitality—this stay is truly out of this world!
-  Book Now
-  
-  Haunted Loft
-  Live with friendly ghosts in our elegantly eerie loft. Paranormal activity is included at no extra charge!
-  Book Now
-  
-  The Meme Mansion
-  Step into a house where every wall is plastered with iconic memes. Picture "Side Eyeing Chloe" smirking in the living room, and "Chill Guy" artwork exuding laid-back vibes in the hallway.
-  Book Now
-  
-  The Upside-Down Hacienda
-  Challenge gravity in a house flipped on its roof—furniture, decor, and even your morning coffee cup are all upside down. Prepare for a topsy-turvy stay!
-  Book Now
-  
-  The Marshmallow Mansion
-  Float in fluffy luxury within walls of giant, pillowy marshmallows. Complimentary hot chocolate served 24/7 to keep the sugar rush going!
-  Book Now
-  
-  The Unicorn Lava Lounge
-  Bask in the warm glow of rainbow lava as unicorns trot by with your midnight snack. Glitter geysers activate on the hour—towels not included!
-  Book Now
-  
-  &copy; 2025 Offbeat Retreats. All whimsical rights reserved.  
+  <div class="container my-5">
+    <header class="text-center mb-5">
+      <h1 class="text-primary">Welcome to Offbeat Retreats!</h1>
+      <p class="lead">Discover vacation rentals that are anything but ordinary.</p>
+      <button class="btn btn-primary">Explore Now</button>
+    </header>
+
+    <div class="row g-4">
+      <div class="col-12 col-md-6 col-lg-4 mb-4">
+        <div class="card h-100">
+          <div class="card-body">
+            <h5 class="card-title">The UFO Bungalow</h5>
+            <p class="card-text">Experience an out-of-this-world stay in our UFO-themed bungalow. Enjoy cosmic views and "alien" hospitality—this stay is truly out of this world!</p>
+            <button class="btn btn-secondary">Book Now</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 mb-4">
+        <div class="card h-100">
+          <div class="card-body">
+            <h5 class="card-title">Haunted Loft</h5>
+            <p class="card-text">Live with friendly ghosts in our elegantly eerie loft. Paranormal activity is included at no extra charge!</p>
+            <button class="btn btn-secondary">Book Now</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 mb-4">
+        <div class="card h-100">
+          <div class="card-body">
+            <h5 class="card-title">The Meme Mansion</h5>
+            <p class="card-text">Step into a house where every wall is plastered with iconic memes. Picture "Side Eyeing Chloe" smirking in the living room, and "Chill Guy" artwork exuding laid-back vibes in the hallway.</p>
+            <button class="btn btn-secondary">Book Now</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 mb-4">
+        <div class="card h-100">
+          <div class="card-body">
+            <h5 class="card-title">The Upside-Down Hacienda</h5>
+            <p class="card-text">Challenge gravity in a house flipped on its roof—furniture, decor, and even your morning coffee cup are all upside down. Prepare for a topsy-turvy stay!</p>
+            <button class="btn btn-secondary">Book Now</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 mb-4">
+        <div class="card h-100">
+          <div class="card-body">
+            <h5 class="card-title">The Marshmallow Mansion</h5>
+            <p class="card-text">Float in fluffy luxury within walls of giant, pillowy marshmallows. Complimentary hot chocolate served 24/7 to keep the sugar rush going!</p>
+            <button class="btn btn-secondary">Book Now</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 mb-4">
+        <div class="card h-100">
+          <div class="card-body">
+            <h5 class="card-title">The Unicorn Lava Lounge</h5>
+            <p class="card-text">Bask in the warm glow of rainbow lava as unicorns trot by with your midnight snack. Glitter geysers activate on the hour—towels not included!</p>
+            <button class="btn btn-secondary">Book Now</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer class="bg-light text-center py-4">
+    <p class="mb-0">&copy; 2025 Offbeat Retreats. All whimsical rights reserved.</p>
+  </footer>
 </body>
 </html>
